--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPkCfWMrDah7wTZUAROCzdA",
+      "authorship_tag": "ABX9TyMJB5MItxUxmAg9eKo8+XQh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "aK2JBi70qHpM"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -69,7 +69,7 @@
       "metadata": {
         "id": "LYzNQwaprfQ7"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -93,7 +93,7 @@
         "id": "dCjnx5hitEcA",
         "outputId": "3d87bd4d-42d0-4fac-ae46-9d417cb89367"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -181,7 +181,7 @@
         "id": "fhwS6K97vymL",
         "outputId": "958496bb-cc6f-46ed-fcf1-70888e308cc1"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -232,7 +232,7 @@
         "id": "fVCDhfr5w32D",
         "outputId": "e4319387-cd27-4889-9536-fe46b856e477"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -258,7 +258,7 @@
         "id": "HIM6x07xxUFA",
         "outputId": "1b2d31db-de49-4c6e-8f81-871320358319"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -398,7 +398,7 @@
         "id": "bF3MRmWWxiyC",
         "outputId": "3130ca90-2a74-41af-9893-6660a0f2a91e"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -429,7 +429,7 @@
         "id": "1C0kymsa1DPM",
         "outputId": "59db7870-c6b0-4a41-a809-6058ad229d87"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -463,7 +463,7 @@
       "metadata": {
         "id": "4lvCjRBt1uko"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -483,7 +483,7 @@
       "metadata": {
         "id": "btoQ77v_3t-4"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -499,7 +499,7 @@
         "id": "EMS4YzWY4TVd",
         "outputId": "518ef3e4-ec48-4c3f-81ac-74661fae044e"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -837,7 +837,7 @@
         "id": "lkFg8WJw6XhF",
         "outputId": "66b06fb9-b4eb-4290-e4be-3070e2ebb9d4"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1145,7 +1145,7 @@
         "id": "HFtQymjG6cI5",
         "outputId": "2e233d3b-210e-4466-947b-f1fe61a8ee92"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1205,7 +1205,7 @@
         "id": "J3Sn5Qmu-VYF",
         "outputId": "06a9696d-1a05-47b5-ebe4-bb4950f84318"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1241,7 +1241,7 @@
         "id": "sXgJ9mVX-b4C",
         "outputId": "a4f090c9-ff73-4bf7-c61a-6cca01e0a19d"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1268,7 +1268,7 @@
         "id": "DMp8y6_pBres",
         "outputId": "1a008e80-c73d-4ea6-92cd-3b07675702c9"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1673,7 +1673,7 @@
         "id": "M_ddz1bIBzzj",
         "outputId": "4e460869-213c-40bc-b3f4-00000f404e7c"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1693,7 +1693,7 @@
       "cell_type": "markdown",
       "source": [
         "#from sklearn.preprocessing import LabelEncoder\n",
-        "#label_y=LabelEncoder()\n",
+        "#labelencoder_y=LabelEncoder()\n",
         "#cancer_df[:,1]=labelencoder_y.fit_transform(cancer_df[:,1].values)"
       ],
       "metadata": {
@@ -1713,7 +1713,7 @@
         "id": "14teyATD7aTc",
         "outputId": "2c3d46d3-f5aa-490f-cd1f-937826d392aa"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1750,7 +1750,7 @@
     {
       "cell_type": "code",
       "source": [
-        "sns.pairplot(cancer_df, vars=['mean radius','mean texture'] , hue='target')"
+        "sns.pairplot(cancer_df, vars=cancer_df.iloc[:,1:5] , hue='target')"
       ],
       "metadata": {
         "colab": {
@@ -1760,7 +1760,7 @@
         "id": "eIEO_jXB_GXR",
         "outputId": "c89fc2fe-b67c-4b75-e945-14c2b35d4d90"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
